Tidy up lots of minor findbugs warnings in fitlibrary itself