@@ -28,8 +28,9 @@ public class NullString implements DomainAdapter {
 	public Integer findInt(String s) {
 		Integer result;
 		if ("".equals(s))
-			result = new Integer(0);
-		else result = new Integer(Math.abs(Integer.valueOf(s).intValue()));
+			result = Integer.valueOf(0);
+		else
+			result = Integer.valueOf(Math.abs(Integer.valueOf(s).intValue()));
 		return result;
 	}
 	@SuppressWarnings({ "rawtypes", "unchecked" })
